# Ship-Ocean

./: README.md
PCL/: CMakeLists.txt
PCL/src/: viewer.cpp
ROS2_WS/src/airsim_ros2_msgs/: CMakeLists.txt  package.xml
ROS2_WS/src/airsim_ros2_msgs/include/airsim_ros2_msgs/: airsim_ros2_wrapper.hpp  airsim_settings_parser.hpp
ROS2_WS/src/airsim_ros2_msgs/log/: latest_list
ROS2_WS/src/airsim_ros2_msgs/src/: airsim_node.cpp  airsim_ros2_wrapper.cpp  airsim_settings_parser.cpp
ROS2_WS/src/airsim_ros2_wrapper/: CMakeLists.txt  package.xml
ROS2_WS/src/airsim_ros2_wrapper/include/: airsim_ros2_wrapper.hpp  airsim_settings_parser.hpp
ROS2_WS/src/airsim_ros2_wrapper/launch/: airsim_node_launch.py
ROS2_WS/src/airsim_ros2_wrapper/src/: airsim_node.cpp  airsim_ros2_wrapper.cpp  airsim_settings_parser.cpp
ROS2_WS/src/minimal_composition/include/minimal_composition/: publisher_node.hpp  subscriber_node.hpp
ROS2_WS/src/minimal_composition/log/: latest_list
ROS2_WS/src/minimal_composition/src/: publisher_node.cpp  subscriber_node.cpp
ROS2_WS/src/more_interfaces/: CMakeLists.txt  package.xml
ROS2_WS/src/more_interfaces/log/: latest_list
ROS2_WS/src/more_interfaces/src/: publish_msgs.cpp
ROS2_WS/src/ship_demo/: CMakeLists.txt  package.xml
ROS2_WS/src/ship_demo/include/airsim_ros2_wrapper/: airsim_ros2_wrapper.hpp
ROS2_WS/src/ship_demo/include/image_handler/: camera_node.hpp  image_handler.hpp
ROS2_WS/src/ship_demo/include/lidar_handler/: lidar_node.hpp
ROS2_WS/src/ship_demo/log/: latest_list
ROS2_WS/src/ship_demo/src/: main.cpp  offboard_control.cpp
ROS2_WS/src/ship_demo/src/airsim_ros2_wrapper/: airsim_ros2_wrapper.cpp
ROS2_WS/src/ship_demo/src/image_handler/: camera_node.cpp  image_handler.cpp
ROS2_WS/src/ship_demo/src/lidar_handler/: lidar_node.cpp
Unreal/Ship_Ocean/: Ship_Ocean.sln  Ship_Ocean.uproject
Unreal/Ship_Ocean/Config/: DefaultEngine.ini  DefaultGame.ini
Unreal/Ship_Ocean/Content/: Ship_demo.umap
Unreal/Ship_Ocean/Content/ShipModel_/: ship_model_PhysicsAsset.uasset  ship_model_Skeleton.uasset
Unreal/Ship_Ocean/Content/ShipModel_/BluePrints/: BP_Ship.uasset
Unreal/Ship_Ocean/Content/ShipModel_/Materials/: Material__36.uasset  Material__37.uasset  Material__38.uasset  Material__39.uasset  Material__40.uasset  Material__41.uasset  Material__42.uasset  Material__43.uasset  Material__44.uasset  Material__45.uasset
Unreal/Ship_Ocean/Content/StarterContent/Architecture/: Floor_400x400.uasset
Unreal/Ship_Ocean/Source/: Ship_Ocean.Target.cs  Ship_OceanEditor.Target.cs
Unreal/Ship_Ocean/Source/Ship_Ocean/: MyClass.h  Ship_Ocean.Build.cs  Ship_Ocean.cpp  Ship_OceanGameModeBase.cpp  Ship_OceanGameModeBase.h
docs/: Index.md  README.md  Refs.md
